# py-analytics-ds

./: 0_Lab_Fundamentos_Python.ipynb  1_Lab_Pandas.ipynb  2_Lab_Matplotlib.ipynb  3_Lab_Seaborn.ipynb  4_Lab_Bokeh.ipynb  5_Lab_Streamlit_1.ipynb  5_Lab_Streamlit_2.ipynb  6_Lab_Plotly.ipynb  7_Lab_Dash_Plotly.ipynb  README.md  Tarea1.ipynb  Tarea2.ipynb  main.py  peru_df_final.xlsx  pyproject.toml
