[project]
name = "py-analytics-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.2",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
]
